# dioxus-sugar

./: Cargo.toml  README.md
dioxus-sugar/: Cargo.toml  README.md
dioxus-sugar/src/: lib.rs  publish_tests.rs
dioxus-sugar/tests/: classes_tests.rs
dioxus-sugar/tests/classes_compile_failures/: duplicate_declarations.stderr  list_values.stderr  literal_values.rs  literal_values.stderr  named_path_values.rs  no_fields_listed.rs  non_display_fields.stderr
src/: class.rs  common.rs  extend.rs  lib.rs  publish_tests.rs
src/apply/: mod.rs
src/apply/attributes/: mod.rs  parse.rs  tokens.rs
src/extend/: attributes.rs  events.rs  mod.rs
tests/: apply_attributes_tests.rs  attributes_tests.rs  classes_tests.rs  events_tests.rs  inject_attributes_tests.rs
tests/classes_compile_failures/: duplicate_declarations.stderr  list_values.rs  missing_fields.stderr  named_path_values.stderr  no_fields_listed.stderr
tests/compile_failures/attributes/: duplicate_declarations.rs  duplicate_declarations.stderr  invalid_attribute.rs  invalid_attribute.stderr  invalid_list_values.rs  invalid_list_values.stderr  literal_values.rs  literal_values.stderr  named_path_values.rs  named_path_values.stderr  no_attributes_listed.rs  no_attributes_listed.stderr  no_net_attributes.rs  no_net_attributes.stderr  no_net_attributes_category.rs  no_net_attributes_category.stderr  unnammed_struct_fields.rs  unnammed_struct_fields.stderr
tests/compile_failures/classes/: duplicate_declarations.rs  duplicate_declarations.stderr  list_values.stderr  literal_values.stderr  missing_fields.rs  missing_fields.stderr  named_path_values.stderr  no_fields_listed.stderr  non_display_fields.rs  non_display_fields.stderr
(+16 files in other folders)
