[package]
name = "dioxus-sugar"
version = "0.1.0"
edition = "2021"
description = "Macros for extending and working with properties of Custom Dioxus Elements"
license = "MIT or Apache-2.0"
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "README.md"]
homepage = "https://github.com/Nejat/dioxus-sugar"
repository = "https://github.com/Nejat/dioxus-sugar"
authors = ["Nejat<nejatoz@gmail.com>"]
keywords = ["dom", "ui", "gui", "react", "wasm"]
categories = ["GUI", "Web programming", "WebAssembly"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
trybuild = "1"
version-sync = "0.9"
